--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'hollow-point';
+  src: url('../fonts/hollow-point/hollowpointsuperital.ttf') format('truetype');
+}
+
 .App {
   text-align: center;
 }
@@ -16,6 +21,7 @@
 
 .App-title {
   font-size: 1.5em;
+  font-family: 'hollow-point', sans-serif;
 }
 
 .App-intro {
